new dev release: set default font on startup