@@ -36,6 +36,10 @@ application {
     mainClass = 'net.cassite.hottapcassistant.Main'
 }
 
+run {
+    jvmArgs += '--add-opens=javafx.graphics/javafx.scene.text=io.vproxy.vfx'
+}
+
 javafx {
     version = '21'
     modules = ['javafx.controls', 'javafx.swing', 'javafx.media']
@@ -49,7 +53,7 @@ repositories {
 dependencies {
     implementation 'com.github.kwhat:jnativehook:2.2.2'
     implementation group: 'io.vproxy', name: 'vjson', version: '1.5.4-jdk9'
-    implementation group: 'io.vproxy', name: 'vfx', version: '1.3.5'
+    implementation group: 'io.vproxy', name: 'vfx', version: '1.4.0'
     implementation group: 'net.cassite', name: 'xboxrelay-ui', version: '1.0.0'
     implementation group: 'net.java.dev.jna', name: 'jna', version: '5.12.1'
     implementation group: 'net.java.dev.jna', name: 'jna-platform', version: '5.12.1'
@@ -76,6 +80,7 @@ jlink {
                    '--enable-preview', '--enable-native-access=ALL-UNNAMED',
                    '--enable-native-access=io.vproxy.pni',
                    '--enable-native-access=io.vproxy.windivert',
+                   '--add-opens=javafx.graphics/javafx.scene.text=io.vproxy.vfx',
         ]
         noConsole = true
     }
